--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,9 @@ Imports:
     magrittr,
     httr,
     readxl,
-    janitor
+    janitor,
+    Rcpp
+LinkingTo: Rcpp
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
