--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     readxl,
     janitor,
     Rcpp
-LinkingTo: Rcpp
+LinkingTo: 
+    Rcpp
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
