--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,16 @@ export(calc_exp)
 export(calc_gdsc_np)
 export(calc_np)
 export(calc_np_all)
+export(calc_np_all2)
 export(calc_np_i)
 export(clean_gdsc)
 export(clean_output)
+export(compute_np)
 export(filter_edges)
 export(filter_nodes)
 export(get_gdsc)
 export(node_repression)
+export(null_np)
 importFrom(Rcpp,sourceCpp)
 importFrom(foreach,"%dopar%")
 importFrom(magrittr,"%>%")
