--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,13 @@ export(calc_np_i)
 export(clean_gdsc)
 export(clean_output)
 export(compute_np)
+export(experiment_breakout)
 export(filter_edges)
 export(filter_nodes)
 export(get_gdsc)
 export(node_repression)
 export(null_np)
+export(tidy_expression)
 importFrom(Rcpp,sourceCpp)
 importFrom(foreach,"%dopar%")
 importFrom(magrittr,"%>%")
