original_pipeline_fast

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,15 @@
 
 export(GDSC_repress)
 export(bind_repression)
+export(calc_dnp_i)
 export(calc_exp)
 export(calc_gdsc_np)
 export(calc_np)
 export(calc_np_all)
-export(calc_np_all2)
 export(calc_np_i)
 export(clean_gdsc)
 export(clean_output)
+export(compute_dnp)
 export(compute_np)
 export(experiment_breakout)
 export(filter_edges)
