--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,14 +12,14 @@ export(clean_gdsc)
 export(clean_output)
 export(compute_dnp)
 export(compute_np)
+export(compute_null)
 export(experiment_breakout)
-export(filter_edges)
-export(filter_nodes)
 export(get_gdsc)
 export(node_repression)
 export(null_np)
 export(tidy_expression)
 importFrom(Rcpp,sourceCpp)
+importFrom(foreach,"%:%")
 importFrom(foreach,"%dopar%")
 importFrom(magrittr,"%>%")
 useDynLib(disruptr, .registration = TRUE)
