--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(null_np)
 export(tidy_expression)
 importFrom(Rcpp,sourceCpp)
 importFrom(foreach,"%:%")
+importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(magrittr,"%>%")
 useDynLib(disruptr, .registration = TRUE)
