--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,11 +15,15 @@ export(compute_np)
 export(compute_null)
 export(experiment_breakout)
 export(get_gdsc)
+export(get_random_graph)
 export(node_repression)
-export(null_np)
 export(tidy_expression)
 importFrom(Rcpp,sourceCpp)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
+importFrom(stats,sd)
+importFrom(utils,download.file)
+importFrom(utils,unzip)
 useDynLib(disruptr, .registration = TRUE)
