give-up on .combine

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(calc_np_all)
 export(calc_np_i)
 export(clean_gdsc)
 export(clean_output)
+export(combine_null)
 export(compute_dnp)
 export(compute_np)
 export(compute_null)
@@ -19,6 +20,7 @@ export(get_random_graph)
 export(node_repression)
 export(tidy_expression)
 importFrom(Rcpp,sourceCpp)
+importFrom(foreach,"%:%")
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(magrittr,"%>%")
